@@ -1,3 +1,8 @@
+2007-08-06  Andreas Kirschbaum
+
+	* Improve metaserver selection window: always include "localhost"
+	entry; do not crash for parsing errors.
+
 2007-08-02  Andreas Kirschbaum
 
 	* Fix word wrapping in log window.
